# geo-knowledge-hub-workshop

./: .gitignore  README.md  index.html
materials/example-01/: .python-version  Makefile  README.md  knowledge-package.json  pyproject.toml
materials/example-01/files/data/datacube/: cube_20LKP_B02_2020-07-22.tif  cube_20LKP_B02_2020-09-08.tif  cube_20LKP_B02_2020-10-10.tif  cube_20LKP_B02_2020-12-13.tif  cube_20LKP_B02_2020-12-29.tif  cube_20LKP_B02_2021-01-30.tif  cube_20LKP_B02_2021-03-03.tif  cube_20LKP_B02_2021-05-06.tif  cube_20LKP_B02_2021-06-07.tif  cube_20LKP_B02_2021-06-23.tif  cube_20LKP_B02_2021-07-09.tif  cube_20LKP_B02_2021-08-10.tif  cube_20LKP_B11_2020-07-06.tif  cube_20LKP_B11_2020-07-22.tif  cube_20LKP_B11_2020-09-08.tif  cube_20LKP_B11_2020-09-24.tif  cube_20LKP_B11_2020-10-10.tif  cube_20LKP_B11_2020-11-11.tif  cube_20LKP_B11_2020-11-27.tif  cube_20LKP_B11_2020-12-29.tif  cube_20LKP_B11_2021-01-30.tif  cube_20LKP_B11_2021-03-03.tif  cube_20LKP_B11_2021-04-04.tif  (+16 more)
materials/example-01/metadata/package/: metadata.json
materials/example-01/package/: Makefile  README.md
materials/example-01/package/analysis/: 01_model-train.R  02_classification.R  03_classification-smooth.R
materials/example-package/: Makefile  README.md  knowledge-package.json  pyproject.toml
materials/example-package/files/: README.md
materials/example-package/files/locations/: spain-madrid.geojson
materials/example-package/files/software/: notebook.ipynb
materials/example-package/metadata/: README.md
materials/example-package/metadata/package/: metadata.json
(+105 files in other folders)
