[tool.poetry]
name = "example-package-loader"
version = "0.1.0"
description = "Example Package load using the Package Loader tool"
authors = ["GEO Knowledge Hub Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
geo-package-loader = {git = "https://github.com/geo-knowledge-hub/geo-package-loader.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
